# contacts/routes/contacts.js
@@ -1,12 +1,13 @@
 const express = require('express');
 const controller = require('../controllers/contacts');
+const { requireLogin } = require('../auth');
 
 const router = express.Router();
 
 router.get('/', controller.getAll);
 router.get('/:id', controller.getSingle);
-router.post('/', controller.createContact);
-router.put('/:id', controller.updateContact);
-router.delete('/:id', controller.deleteContact);
+router.post('/', requireLogin, controller.createContact);
+router.put('/:id', requireLogin, controller.updateContact);
+router.delete('/:id', requireLogin, controller.deleteContact);
 
 module.exports = router;
