# contacts/routes/projects.js
@@ -1,12 +1,13 @@
 const express = require('express');
 const controller = require('../controllers/projects');
+const { requireLogin } = require('../auth');
 
 const router = express.Router();
 
 router.get('/', controller.getAll);
 router.get('/:id', controller.getSingle);
-router.post('/', controller.createProject);
-router.put('/:id', controller.updateProject);
-router.delete('/:id', controller.deleteProject);
+router.post('/', requireLogin, controller.createProject);
+router.put('/:id', requireLogin, controller.updateProject);
+router.delete('/:id', requireLogin, controller.deleteProject);
 
 module.exports = router;
